examples/tests/snapshots/09_widgets_dashboard__headless_snapshot_ping_button_click.snap
---
source: examples/tests/09_widgets_dashboard.rs
expression: "drive(&[&[down, up], &[]])"
---
·retroglyph·dashboard·--·tabs/select,·q/Esc·quits·
Service············Status·····Metrics·Alerts······
api-gateway········OK·····························
auth···············OK·········CPU·██████░░░░░··58%
billing············WARN·······MEM·█████░░░░░░··41%
search·············OK·········History:············
worker-queue·······DOWN···········▂▃▄▃▄▅▅▇▇▇▆▆▇██▇
cache··············OK·········┌──────────────────┐
······························│·Legend···········│
······························│·OK·/·WARN·/·DOWN·│
······························└──────────────────┘
··················································
································Ping···Pings:·0···
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································

--- frame ---
·retroglyph·dashboard·--·tabs/select,·q/Esc·quits·
Service············Status·····Metrics·Alerts······
api-gateway········OK·····························
auth···············OK·········CPU·██████░░░░░··58%
billing············WARN·······MEM·█████░░░░░░··41%
search·············OK·········History:············
worker-queue·······DOWN···········▂▃▄▃▄▅▅▇▇▇▆▆▇██▇
cache··············OK·········┌──────────────────┐
······························│·Legend···········│
······························│·OK·/·WARN·/·DOWN·│
······························└──────────────────┘
··················································
································Ping···Pings:·1···
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
