examples/tests/snapshots/09_widgets_dashboard__png_snapshot.snap
---
source: examples/tests/09_widgets_dashboard.rs
expression: png
extension: png
snapshot_kind: binary
---
