examples/tests/snapshots/09_widgets_dashboard__svg_snapshot.snap
---
source: examples/tests/09_widgets_dashboard.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="436" height="466">
<rect width="100%" height="100%" fill="#111111"/>
<text font-family="monospace" font-size="14" y="26.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0"> </tspan>
  <tspan fill="#5aaafa" x="16.4">retroglyph dashboard -- tabs/select, q/Esc quits</tspan>
  <tspan fill="#cccccc" x="419.6"> </tspan>
</text>
<text font-family="monospace" font-size="14" y="44.0" xml:space="preserve">
  <tspan fill="#bec0d0" x="8.0" style="background:#161620">Service</tspan>
  <tspan fill="#cccccc" x="66.8">            </tspan>
  <tspan fill="#bec0d0" x="167.6" style="background:#161620">Status</tspan>
  <tspan fill="#cccccc" x="218.0">     </tspan>
  <tspan fill="#5aaafa" x="260.0" style="background:#161620">Metrics</tspan>
  <tspan fill="#cccccc" x="318.8"> </tspan>
  <tspan fill="#6e7082" x="327.2">Alerts</tspan>
  <tspan fill="#cccccc" x="377.6">      </tspan>
</text>
<text font-family="monospace" font-size="14" y="62.0" xml:space="preserve">
  <tspan fill="#101018" x="8.0" style="background:#5aaafa">api-gateway</tspan>
  <tspan fill="#cccccc" x="100.4" style="background:#5aaafa">        </tspan>
  <tspan fill="#101018" x="167.6" style="background:#5aaafa">OK</tspan>
  <tspan fill="#cccccc" x="184.4" style="background:#5aaafa">         </tspan>
  <tspan fill="#cccccc" x="260.0">                    </tspan>
</text>
<text font-family="monospace" font-size="14" y="80.0" xml:space="preserve">
  <tspan fill="#6e7082" x="8.0" style="background:#161620">auth</tspan>
  <tspan fill="#cccccc" x="41.6">               </tspan>
  <tspan fill="#6e7082" x="167.6" style="background:#161620">OK</tspan>
  <tspan fill="#cccccc" x="184.4">         </tspan>
  <tspan fill="#6e7082" x="260.0" style="background:#161620">CPU</tspan>
  <tspan fill="#cccccc" x="285.2"> </tspan>
  <tspan fill="#dcb65a" x="293.6">██████</tspan>
  <tspan fill="#32323c" x="344.0">░░░░░</tspan>
  <tspan fill="#cccccc" x="386.0"> </tspan>
  <tspan fill="#dcb65a" x="394.4"> 58%</tspan>
</text>
<text font-family="monospace" font-size="14" y="98.0" xml:space="preserve">
  <tspan fill="#6e7082" x="8.0" style="background:#161620">billing</tspan>
  <tspan fill="#cccccc" x="66.8">            </tspan>
  <tspan fill="#6e7082" x="167.6" style="background:#161620">WARN</tspan>
  <tspan fill="#cccccc" x="201.2">       </tspan>
  <tspan fill="#6e7082" x="260.0" style="background:#161620">MEM</tspan>
  <tspan fill="#cccccc" x="285.2"> </tspan>
  <tspan fill="#c3c85f" x="293.6">█████</tspan>
  <tspan fill="#32323c" x="335.6">░░░░░░</tspan>
  <tspan fill="#cccccc" x="386.0"> </tspan>
  <tspan fill="#c3c85f" x="394.4"> 41%</tspan>
</text>
<text font-family="monospace" font-size="14" y="116.0" xml:space="preserve">
  <tspan fill="#6e7082" x="8.0" style="background:#161620">search</tspan>
  <tspan fill="#cccccc" x="58.4">             </tspan>
  <tspan fill="#6e7082" x="167.6" style="background:#161620">OK</tspan>
  <tspan fill="#cccccc" x="184.4">         </tspan>
  <tspan fill="#6e7082" x="260.0">History:</tspan>
  <tspan fill="#cccccc" x="327.2">            </tspan>
</text>
<text font-family="monospace" font-size="14" y="134.0" xml:space="preserve">
  <tspan fill="#6e7082" x="8.0" style="background:#161620">worker-queue</tspan>
  <tspan fill="#cccccc" x="108.8">       </tspan>
  <tspan fill="#6e7082" x="167.6" style="background:#161620">DOWN</tspan>
  <tspan fill="#cccccc" x="201.2">           </tspan>
  <tspan fill="#a5c866" x="293.6">▂</tspan>
  <tspan fill="#b6c862" x="302.0">▃</tspan>
  <tspan fill="#d4c85c" x="310.4">▄</tspan>
  <tspan fill="#c7c85f" x="318.8">▃</tspan>
  <tspan fill="#dcc15a" x="327.2">▄</tspan>
  <tspan fill="#dcaa5a" x="335.6">▅</tspan>
  <tspan fill="#dcb45a" x="344.0">▅</tspan>
  <tspan fill="#dc7f5a" x="352.4">▇</tspan>
  <tspan fill="#dc6b5a" x="360.8">▇</tspan>
  <tspan fill="#dc755a" x="369.2">▇</tspan>
  <tspan fill="#dc995a" x="377.6">▆</tspan>
  <tspan fill="#dc895a" x="386.0">▆</tspan>
  <tspan fill="#dc6e5a" x="394.4">▇</tspan>
  <tspan fill="#dc5a5a" x="402.8">█</tspan>
  <tspan fill="#dc675a" x="411.2">█</tspan>
  <tspan fill="#dc755a" x="419.6">▇</tspan>
</text>
<text font-family="monospace" font-size="14" y="152.0" xml:space="preserve">
  <tspan fill="#6e7082" x="8.0" style="background:#161620">cache</tspan>
  <tspan fill="#cccccc" x="50.0">              </tspan>
  <tspan fill="#6e7082" x="167.6" style="background:#161620">OK</tspan>
  <tspan fill="#cccccc" x="184.4">         </tspan>
  <tspan fill="#bec0d0" x="260.0" style="background:#161620">┌──────────────────┐</tspan>
</text>
<text font-family="monospace" font-size="14" y="170.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                              </tspan>
  <tspan fill="#bec0d0" x="260.0" style="background:#161620">│ Legend           │</tspan>
</text>
<text font-family="monospace" font-size="14" y="188.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                              </tspan>
  <tspan fill="#bec0d0" x="260.0" style="background:#161620">│ OK / WARN / DOWN │</tspan>
</text>
<text font-family="monospace" font-size="14" y="206.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                              </tspan>
  <tspan fill="#bec0d0" x="260.0" style="background:#161620">└──────────────────┘</tspan>
</text>
<text font-family="monospace" font-size="14" y="224.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="242.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                              </tspan>
  <tspan fill="#bec0d0" x="260.0" style="background:#161620">  Ping  </tspan>
  <tspan fill="#cccccc" x="327.2"> </tspan>
  <tspan fill="#6e7082" x="335.6">Pings: 0</tspan>
  <tspan fill="#cccccc" x="402.8">   </tspan>
</text>
<text font-family="monospace" font-size="14" y="260.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="278.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="296.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="314.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="332.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="350.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="368.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="386.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="404.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="422.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="440.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
<text font-family="monospace" font-size="14" y="458.0" xml:space="preserve">
  <tspan fill="#cccccc" x="8.0">                                                  </tspan>
</text>
</svg>
